--- a/FRONT/template/index.html
+++ b/FRONT/template/index.html
@@ -15,24 +15,19 @@
             <span> | </span>
             <p>E N</p>
           </div>
-          <div class="highlight">NEWSLETTER</div>
-          <div class="fr-en nav-bar">
-            <p>Accueil</p>
-            <span> | </span>
-            <p>Festival</p>
-            <span> | </span>
-            <p>Avec les publics</p>
-            <span> | </span>
-            <p>Association</p>
-            <span> | </span>
-            <p>Actualités</p>
-            <span> | </span>
-            <p>Archives</p>
-            <span> | </span>
-            <p>Espace pros</p>
-            <span> | </span>
-            <p>Contacts</p>
-          </div>
+          <div class="highlight newsletter-header">NEWSLETTER</div>
+          <nav class="fr-en">
+            <ul class="nav-bar">
+              <li>Accueil</li>
+              <li>Festival</li>
+              <li>Avec les publics</li>
+              <li>Associations</li>
+              <li>Actualités</li>
+              <li>Archives</li>
+              <li>Espace pros</li>
+              <li>Contacts</li>
+            </ul>
+          </nav>
           <div class="search-magnifier">
             <img
               src="images/loupe.png"
@@ -109,135 +104,138 @@
     </header>
     <main>This is the main</main>
     <footer>
-      <div class="footer-column1">
-        <div class="footer-column1-title">
-          <img src="images/logo_festival.png" width="250" alt="logo partner2" />
+      <div class="wrapper-footer">
+        <div class="footer-column1">
+          <div class="footer-column1-title">
+            <img src="images/logo_festival.png" width="250" alt="logo partner2" />
+          </div>
+          <div class="footer-column1-partners">
+            <p>Nos Partenaires</p>
+            <ul>
+              <li>
+                <img
+                  src="images/logo_celestins.png"
+                  alt="logo partner theater les celestins"
+                  width="80"
+                />
+              </li>
+              <li>
+                <img src="images/logo_lyon.png" alt="logo partner lyon city" />
+              </li>
+              <li>
+                <img
+                  src="images/logo_nova.jpeg"
+                  alt="logo partner nova radio"
+                  style="filter: invert(100%)"
+                  width="130"
+                />
+              </li>
+              <li>
+                <img
+                  src="images/logo_femmes.png"
+                  alt="logo partner les femmes ici et ailleurs"
+                  width="100"
+                />
+              </li>
+              <li>
+                <img
+                  src="images/logo_ARA.png"
+                  alt="logo partner ARA region"
+                  style="filter: invert(100%)"
+                  width="180"
+                />
+              </li>
+            </ul>
+          </div>
         </div>
-        <div class="footer-column1-partners">
-          <p>Nos Partenaires</p>
-          <ul>
-            <li>
-              <img
-                src="images/logo_celestins.png"
-                alt="logo partner theater les celestins"
-                width="80"
-              />
-            </li>
-            <li>
-              <img src="images/logo_lyon.png" alt="logo partner lyon city" />
-            </li>
-            <li>
-              <img
-                src="images/logo_nova.jpeg"
-                alt="logo partner nova radio"
-                style="filter: invert(100%)"
-                width="130"
-              />
-            </li>
-            <li>
-              <img
-                src="images/logo_femmes.png"
-                alt="logo partner les femmes ici et ailleurs"
-                width="100"
-              />
-            </li>
-            <li>
-              <img
-                src="images/logo_ARA.png"
-                alt="logo partner ARA region"
-                style="filter: invert(100%)"
-                width="180"
-              />
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div class="footer-column2">
-        <div class="footer-column2-newsletter">
-          <p>
-            Sens interdits est une association et un Festival de théâtre
-            international
-          </p>
-          <div class="newsletter-container">
-            <div>
-              <h3 style="margin: 0">NEWSLETTER</h3>
-              <p style="margin: 0">Recevez nos actualités</p>
+        <div class="footer-column2">
+          <div class="footer-column2-newsletter">
+            <p>
+              Sens interdits est une association et un Festival de théâtre
+              international
+            </p>
+            <div class="newsletter-container">
+              <div>
+                <h3 style="margin: 0">NEWSLETTER</h3>
+                <p style="margin: 0">Recevez nos actualités</p>
+              </div>
+              <input type="text" />
             </div>
-            <input type="text" />
           </div>
-        </div>
-        <div class="footer-column2-socialnetwork">
-          <p>Suivez-nous !</p>
-          <div class="social-network">
-            <a href="#" title="link to facebook"
-              ><img
-                src="images/facebook.svg"
-                alt="facebook"
-                style="filter: invert(100%)"
-                width="110"
-            /></a>
-            <a href="#" title="link to instagram"
-              ><img
-                src="images/insta.svg"
-                alt="instagram"
-                style="filter: invert(100%)"
-                width="110"
-            /></a>
-            <a href="#" title="link to twitter"
-              ><img
-                src="images/twitter.svg"
-                alt="twitter"
-                style="filter: invert(100%)"
-                width="110"
-            /></a>
-            <a href="#" title="link to linkedin"
-              ><img
-                src="images/share.svg"
-                alt="linkedin"
-                style="filter: invert(100%)"
-                width="110"
-            /></a>
-            <a href="#" title="link to share"
-              ><img
-                src="images/share.svg"
-                alt="share"
-                style="filter: invert(100%)"
-                width="110"
-            /></a>
+          <div class="footer-column2-socialnetwork">
+            <p>Suivez-nous !</p>
+            <div class="social-network">
+              <a href="#" title="link to facebook"
+                ><img
+                  src="images/facebook.svg"
+                  alt="facebook"
+                  style="filter: invert(100%)"
+                  width="110"
+              /></a>
+              <a href="#" title="link to instagram"
+                ><img
+                  src="images/insta.svg"
+                  alt="instagram"
+                  style="filter: invert(100%)"
+                  width="110"
+              /></a>
+              <a href="#" title="link to twitter"
+                ><img
+                  src="images/twitter.svg"
+                  alt="twitter"
+                  style="filter: invert(100%)"
+                  width="110"
+              /></a>
+              <a href="#" title="link to linkedin"
+                ><img
+                  src="images/share.svg"
+                  alt="linkedin"
+                  style="filter: invert(100%)"
+                  width="110"
+              /></a>
+              <a href="#" title="link to share"
+                ><img
+                  src="images/share.svg"
+                  alt="share"
+                  style="filter: invert(100%)"
+                  width="110"
+              /></a>
+            </div>
           </div>
-        </div>
-        <div class="footer-column2-listlink">
-          <div>
-            <p>Vous informer</p>
-            <ul>
-              <li><a>Programmation</a></li>
-              <li><a>Billetterie</a></li>
-              <li><a>Sens interdits</a></li>
-              <li><a>Partenaires</a></li>
-              <li><a>Archives</a></li>
-            </ul>
-          </div>
-          <div>
-            <p>Presse</p>
-            <ul>
-              <li><a>Dossier de presse</a></li>
-              <li><a>Kit presse</a></li>
-              <li><a>Revue de presse</a></li>
-              <li><a>Contact</a></li>
-            </ul>
-          </div>
-          <div>
-            <p>Sens interdit</p>
-            <ul>
-              <li><a>Le festival</a></li>
-              <li><a>L'association</a></li>
-              <li><a>L'équipe</a></li>
-              <li><a>Soutenez-nous</a></li>
-              <li><a>Contact</a></li>
-            </ul>
+          <div class="footer-column2-listlink">
+            <div>
+              <p>Vous informer</p>
+              <ul>
+                <li><a>Programmation</a></li>
+                <li><a>Billetterie</a></li>
+                <li><a>Sens interdits</a></li>
+                <li><a>Partenaires</a></li>
+                <li><a>Archives</a></li>
+              </ul>
+            </div>
+            <div>
+              <p>Presse</p>
+              <ul>
+                <li><a>Dossier de presse</a></li>
+                <li><a>Kit presse</a></li>
+                <li><a>Revue de presse</a></li>
+                <li><a>Contact</a></li>
+              </ul>
+            </div>
+            <div>
+              <p>Sens interdit</p>
+              <ul>
+                <li><a>Le festival</a></li>
+                <li><a>L'association</a></li>
+                <li><a>L'équipe</a></li>
+                <li><a>Soutenez-nous</a></li>
+                <li><a>Contact</a></li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
+      
     </footer>
   </body>
 </html>
