target blank on social network link

--- a/FRONT/template/index.html
+++ b/FRONT/template/index.html
@@ -69,28 +69,28 @@
                 width="80"
                 style="filter: invert(100%)"
             /></a>
-            <a href="#" title="link to instagram"
+            <a href="#" title="link to instagram" target="_blank"
               ><img
                 src="images/insta.svg"
                 alt="instagram"
                 style="filter: invert(100%)"
                 width="80"
             /></a>
-            <a href="#" title="link to twitter"
+            <a href="#" title="link to twitter" target="_blank"
               ><img
                 src="images/twitter.svg"
                 alt="twitter"
                 style="filter: invert(100%)"
                 width="80"
             /></a>
-            <a href="#" title="link to linkedin"
+            <a href="#" title="link to linkedin" target="_blank"
               ><img
                 src="images/share.svg"
                 alt="linkedin"
                 width="80"
                 style="filter: invert(100%)"
             /></a>
-            <a href="#" title="link to share"
+            <a href="#" title="link to share" target="_blank"
               ><img
                 src="images/share.svg"
                 alt="share"
@@ -165,35 +165,35 @@
           <div class="footer-column2-socialnetwork">
             <p>Suivez-nous !</p>
             <div class="social-network">
-              <a href="#" title="link to facebook"
+              <a href="#" title="link to facebook" target="_blank"
                 ><img
                   src="images/facebook.svg"
                   alt="facebook"
                   style="filter: invert(100%)"
                   width="110"
               /></a>
-              <a href="#" title="link to instagram"
+              <a href="#" title="link to instagram" target="_blank"
                 ><img
                   src="images/insta.svg"
                   alt="instagram"
                   style="filter: invert(100%)"
                   width="110"
               /></a>
-              <a href="#" title="link to twitter"
+              <a href="#" title="link to twitter" target="_blank"
                 ><img
                   src="images/twitter.svg"
                   alt="twitter"
                   style="filter: invert(100%)"
                   width="110"
               /></a>
-              <a href="#" title="link to linkedin"
+              <a href="#" title="link to linkedin" target="_blank"
                 ><img
                   src="images/share.svg"
                   alt="linkedin"
                   style="filter: invert(100%)"
                   width="110"
               /></a>
-              <a href="#" title="link to share"
+              <a href="#" title="link to share" target="_blank"
                 ><img
                   src="images/share.svg"
                   alt="share"
