--- a/FRONT/template/index.html
+++ b/FRONT/template/index.html
@@ -54,13 +54,12 @@
               <p>Octobre 2021</p>
               <p>LYON METROPOLE</p>
             </div>
-  
           </div>
           <div class="billetterie-programme">
             <a href="#" title="billetterie" class="highlight">BILLETTERIE </a>
             <a href="#" title="programme" class="highlight">PROGRAMME</a>
           </div>
-  
+
           <div class="social-network">
             <a href="#" title="link to facebook" target="_blank"
               ><img
@@ -100,14 +99,172 @@
           </div>
         </div>
       </div>
-      
     </header>
-    <main>This is the main</main>
+
+    <main>
+      <div class="slider">
+        <div class="red"></div>
+        <div class="image-text">
+          <p>PEER GYNT FROM KOSOVO</p>
+          <button>Réserver</button>
+        </div>
+
+      </div>
+      <div class="left-side">
+        <p>Kosovo</p>
+      </div>
+      <div class="calendar">
+        <div class="calendar-container">
+          <div class="calendar-day">
+            <p>mer</p>
+            <span>16</span>
+            <p>Oct</p>
+          </div>
+          <div class="calendar-day active">
+            <p>mer</p>
+            <span>16</span>
+            <p>Oct</p>
+          </div>
+          <div class="calendar-day">
+            <p>mer</p>
+            <span>16</span>
+            <p>Oct</p>
+          </div>
+          <div class="calendar-day">
+            <p>mer</p>
+            <span>16</span>
+            <p>Oct</p>
+          </div>
+          <div class="calendar-day">
+            <p>mer</p>
+            <span>16</span>
+            <p>Oct</p>
+          </div>
+        </div>
+      </div>
+      <div class="right-side">
+        <div class="right-side-container">
+          <div class="info-container">
+            <p>Infos Pratiques</p>
+            <ul>
+              <li>Pays : KOSOVO</li>
+              <li>Durée : 1h30</li>
+              <li>Spectacle en russe surtitré et doublé en français</li>
+              <li>A partir de 10 ans</li>
+            </ul>
+          </div>
+            <div class="accessibility-logo">
+              <img
+                src="images/handivisuel.svg"
+                alt="logo handicap visuel"
+                width="70"
+                height="70"
+              />
+              <img
+                src="images/handivisuel.svg"
+                alt="logo handicap visuel"
+                width="70"
+                height="70"
+              />
+              <img
+                src="images/handiauditiflsf.svg"
+                alt="logo handicap visuel"
+                width="70"
+                height="70"
+              />
+            </div>
+          
+          <div class="partners-logo">
+            <img
+              src="images/logo_lpa.png"
+              alt="logo du festival"
+              width="70"
+              height="70"
+            />
+            <img
+              src="images/logo_lpa.png"
+              alt="logo du festival"
+              width="70"
+              height="70"
+            />
+            <img
+              src="images/logo_lpa.png"
+              alt="logo du festival"
+              width="70"
+              height="70"
+            />
+          </div>
+        </div>
+        </div>
+      </div>
+      <div class="tab-module">
+        <ul>
+          <li>
+            <a href="#" title="" class="tab-link active" id="sign-in"
+              ><img src="images/picto+.svg" alt="pictogramme cliquable" weight="30" height='30' />À propos</a
+            >
+          </li>
+          <li>
+            <a href="#" title="" class="tab-link" id="sign-up"
+              ><img src="images/picto+.svg" alt="pictogramme cliquable" weight="30" height='30' />Biographie</a
+            >
+          </li>
+          <li>
+            <a href="#" title="" class="tab-link" id="sign-up"
+              ><img src="images/picto+.svg" alt="pictogramme cliquable" weight="30" height='30' />Biographie</a
+            >
+          </li>
+          <li>
+            <a href="#" title="" class="tab-link" id="sign-up"
+              ><img src="images/picto+.svg" alt="pictogramme cliquable" weight="30" height='30' />Biographie</a
+            >
+          </li>
+        </ul>
+        <div class="tab active" id="tab-sign-in">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce in
+            ante ante. Nunc pellentesque nisl id pretium pharetra. Quisque vitae
+            ullamcorper risus, ac feugiat magna. Suspendisse eros tortor, tempus
+            ac fringilla id, condimentum a sapien. Vivamus tempus, enim ac
+            dictum varius, magna ante sagittis sapien, id tincidunt dolor sapien
+            pulvinar nunc. Sed ultricies, nibh a ullamcorper iaculis, nulla odio
+            semper urna, ut tempus erat dui a erat. Fusce placerat pellentesque
+            semper. Nulla sed bibendum risus. Donec semper bibendum ante, eu
+            auctor velit porttitor non.
+            Nulla facilisi. Aenean malesuada libero in porta gravida. Suspendisse
+            molestie laoreet leo id sagittis. 
+          </p>
+        </div>
+        <div class="tab hide" id="tab-sign-up">
+          Nulla facilisi. Aenean malesuada libero in porta gravida. Suspendisse
+          molestie laoreet leo id sagittis. Integer euismod luctus nisl maximus
+          porttitor. Nunc eget arcu auctor, malesuada odio in, facilisis justo.
+          Morbi turpis sapien, lobortis non commodo pellentesque, vulputate
+          mollis mauris. In semper in dui eget venenatis.
+        </div>
+      </div>
+      <div class="content">
+        <p>Autour du spectacle</p>
+        <div class="content-spectacle">
+          <div class="spectacle-card"></div>
+          <div class="spectacle-card"></div>
+        </div>
+        <div>
+        </div>
+      </div>
+    </main>
+
+
+
     <footer>
       <div class="wrapper-footer">
         <div class="footer-column1">
           <div class="footer-column1-title">
-            <img src="images/logo_festival.png" width="250" alt="logo partner2" />
+            <img
+              src="images/logo_festival.png"
+              width="250"
+              alt="logo partner2"
+            />
           </div>
           <div class="footer-column1-partners">
             <p>Nos Partenaires</p>
@@ -235,7 +392,6 @@
           </div>
         </div>
       </div>
-      
     </footer>
   </body>
 </html>
