change the footer like new design

--- a/FRONT/gatsby-sens-interdits/src/styles/header-footer.css
+++ b/FRONT/gatsby-sens-interdits/src/styles/header-footer.css
@@ -51,11 +51,6 @@ footer {
   background-color: black;
   display: flex;
 }
-.highlight {
-  color: #000000;
-  background: white;
-  font-weight: bold;
-}
 
 a {
   text-decoration: none;
@@ -75,8 +70,9 @@ li {
 }
 .fr-en {
   display: flex;
+  flex-direction: row;
   flex-wrap: nowrap;
-  padding-left: 30px;
+  width: max-content;
   font-size: 12px;
 }
 
@@ -86,17 +82,41 @@ li {
   color: red;
 }
 
+/* BOUTON HIGHLIGHT */
+.highlight {
+  color: #000000;
+  background: white;
+  border-top: solid red 4px;
+  border-left: solid red 1px;
+  border-right: solid red 1px;
+  border-radius: 0 0 7px 7px;
+  font-weight: bold;
+  font-size: 10px;
+}
+
 .nav-bar {
   display: flex;
+  flex-direction: row;
   flex-wrap: nowrap;
-  list-style: none;
+  padding: 0;
 }
 .nav-bar li {
   border-right: solid red 2px;
   padding: 0 5px;
+  width: max-content;
 }
 .nav-bar :nth-last-child(1) {
   border-right: none;
+}
+
+/* button billetterie et programme */
+.billetterie-programme {
+  display: flex;
+  align-items: flex-end;
+  margin-left: 10px;
+}
+.billetterie-programme a {
+  margin-right: 10px;
 }
 
 /* HEADER ROW 2 */
@@ -155,28 +175,28 @@ p {
   font-size: 9px;
 }
 
-.billetterie-programme {
-  display: flex;
-  flex-grow: 1;
-  padding-bottom: 10px;
-  align-items: flex-end;
-  font-size: 16px;
-}
-.billetterie-programme a {
-  margin-right: 30px;
-}
-
 .social-network {
   display: flex;
   flex-wrap: nowrap;
-  align-items: flex-end;
+  margin-bottom: 0;
+  flex-grow: 1;
+  padding: 0;
 }
 .social-network a {
   margin-left: 5px;
   height: 30px;
 }
 
+.header-row2 .social-network {
+  justify-content: flex-end;
+  margin-right: 30px;
+}
+
 /* FOOTER CSS */
+footer {
+  height: 350px;
+  color: rgb(190, 190, 190);
+}
 .wrapper-footer {
   width: 1080px;
   margin: 0 auto;
@@ -188,24 +208,47 @@ p {
   flex-direction: column;
   margin: 20px;
 }
-.footer-column1-title {
+
+.footer-column1-socialnetwork {
+  margin-top: 20px;
 }
-.footer-column1-partners ul li {
-  list-style-type: none;
-}
-.footer-column1-partners p {
+.footer-column1-socialnetwork p {
   text-transform: uppercase;
+  font-size: 20px;
 }
+
+.footer-column1-listlink {
+  display: flex;
+  margin-top: 20px;
+  font-size: 16px;
+}
+
+.footer-column1-listlink ul {
+  margin: 0;
+  margin-left: 10px;
+  padding: 0 1em;
+  list-style: none;
+}
+
+.footer-column1-listlink ul li:before {
+  content: "";
+  border-color: transparent rgb(126, 6, 6);
+  border-style: solid;
+  border-width: 0.35em 0 0.35em 0.45em;
+  display: block;
+  height: 0;
+  width: 0;
+  left: -1em;
+  top: 0.9em;
+  position: relative;
+}
+
 /* FOOTER COLUMN2 */
 
-footer {
-  min-height: 550px;
-}
 .footer-column2 {
   display: flex;
   flex-direction: column;
-  margin-left: 100px;
-  margin-top: 80px;
+  margin-left: 50px;
 }
 .footer-column2-listlink {
   display: flex;
@@ -227,24 +270,6 @@ footer {
   width: 75%;
   color: white;
 }
-.footer-column2-socialnetwork {
-  margin-top: 20px;
-}
-.footer-column2-socialnetwork p {
-  text-transform: uppercase;
-  font-weight: bold;
-  font-size: 1.5em;
-}
-
-footer .social-network {
-  display: flex;
-  flex-wrap: nowrap;
-  margin-bottom: 10px;
-  margin-top: -20px;
-}
-footer .social-network li {
-  list-style: none;
-}
 
 .footer-column2-listlink div {
   margin: 0 10px;
@@ -258,11 +283,9 @@ footer .social-network li {
   padding-bottom: 10px;
   text-transform: uppercase;
 }
-.footer-column2-listlink div ul {
-  margin: 0;
-}
 
 .footer-column2-listlink div ul {
+  margin: 0;
   margin-left: 10px;
   padding: 0 1em;
   list-style: none;
@@ -282,7 +305,7 @@ footer .social-network li {
 }
 
 /* Media Queries **************************/
-@media (max-width: 1024px) {
+/* @media (max-width: 1024px) {
   .highlight {
     display: none;
   }
@@ -298,4 +321,4 @@ footer .social-network li {
   header .social-network {
     display: none;
   }
-}
+} */
