--- a/FRONT/gatsby-sens-interdits/src/components/globalscomponents/programmepagecomponents/ProgrammePage.css
+++ b/FRONT/gatsby-sens-interdits/src/components/globalscomponents/programmepagecomponents/ProgrammePage.css
@@ -5,7 +5,8 @@
 
 .global-programmepage .slider img {
   width: 100%;
-  height: 100%;
+  max-height: 500px;
+  object-fit: cover;
 }
 
 .global-homepage .content-homepage {
