minitab done on the programme component

--- a/FRONT/gatsby-sens-interdits/src/components/globalscomponents/programmepagecomponents/ProgrammePage.css
+++ b/FRONT/gatsby-sens-interdits/src/components/globalscomponents/programmepagecomponents/ProgrammePage.css
@@ -16,3 +16,10 @@
   margin: 0 auto 0 auto;
   max-width: 1080px;
 }
+
+.display-miniTab {
+  display: flex;
+  flex-wrap: wrap;
+  width: 1080px;
+  margin: auto;
+}
