--- a/FRONT/gatsby-sens-interdits/src/components/globalscomponents/programmepagecomponents/SpectacleMiniTab.css
+++ b/FRONT/gatsby-sens-interdits/src/components/globalscomponents/programmepagecomponents/SpectacleMiniTab.css
@@ -1,8 +1,9 @@
 .miniTab {
-  width: 200px;
-  height: 300px;
   display: flex;
   flex-direction: column;
+  width: 200px;
+  margin: 20px;
+  flex-wrap: wrap;
 }
 
 .global-miniTab {
