--- a/FRONT/template/index.html
+++ b/FRONT/template/index.html
@@ -143,8 +143,8 @@
             </div>
           </div>
         </div>
-        <div class="right-side">
-          <div class="right-side-container">
+        <div class="spectacle-info">
+          <div class="spectacle-info-container">
             <div class="info-container">
               <p>Infos Pratiques</p>
               <ul>
