--- a/FRONT/gatsby-sens-interdits/src/components/globalscomponents/Calendar/CalendarLarge.css
+++ b/FRONT/gatsby-sens-interdits/src/components/globalscomponents/Calendar/CalendarLarge.css
@@ -1,8 +1,9 @@
 .global-CalendarLarge {
+  grid-area: calendar;
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  justify-content: center;
+  /* justify-content: center; */
   width: 1080px;
   margin: auto;
   margin-top: 20px;
