--- a/FRONT/gatsby-sens-interdits/src/components/specifics/Header/Header.css
+++ b/FRONT/gatsby-sens-interdits/src/components/specifics/Header/Header.css
@@ -1,4 +1,18 @@
 /* HEADER CSS */
+header {
+  grid-area: header;
+  color: white;
+  background-color: #000000;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 160px;
+}
+
+.wrapper-header {
+  width: 1080px;
+  margin: 0 auto;
+}
 /* HEADER ROW 1 */
 .header-row1 {
   display: flex;
@@ -130,108 +144,4 @@ p {
   margin-right: 30px;
 }
 
-/* FOOTER CSS */
-footer {
-  height: 350px;
-  color: rgb(190, 190, 190);
-}
-.wrapper-footer {
-  width: 1080px;
-  margin: 0 auto;
-  display: flex;
-}
-/* FOOTER COLUMN1 */
-.footer-column1 {
-  display: flex;
-  flex-direction: column;
-  margin: 20px;
-}
-.footer-column1 .main-logo a img {
-  width: 290px;
-}
 
-.footer-column1-socialnetwork {
-  margin-top: 20px;
-}
-.footer-column1-socialnetwork p {
-  text-transform: uppercase;
-  font-size: 20px;
-}
-
-.footer-listlink {
-  display: flex;
-  margin-top: 20px;
-  font-size: 16px;
-}
-
-.footer-listlink ul {
-  margin: 0;
-  margin-left: 10px;
-  padding: 0 1em;
-  list-style: none;
-}
-
-.footer-listlink ul li:before {
-  content: "";
-  border-color: transparent rgb(126, 6, 6);
-  border-style: solid;
-  border-width: 0.35em 0 0.35em 0.45em;
-  display: block;
-  height: 0;
-  width: 0;
-  left: -1em;
-  top: 0.9em;
-  position: relative;
-}
-
-/* FOOTER COLUMN2 */
-
-.footer-column2 {
-  display: flex;
-  flex-direction: column;
-  margin-left: 50px;
-}
-
-.newsletter-container {
-  display: flex;
-  justify-content: space-between;
-  background: #1b1b1b;
-  padding: 10px;
-  margin: 20px 0;
-  width: 650px;
-}
-.newsletter-container .input-newsletter {
-  align-self: center;
-  background: #3b3b3b;
-  border: none;
-  height: 35px;
-  width: 75%;
-  color: white;
-}
-
-.newsletter-container .submit-newsletter {
-  align-self: center;
-  background: #3b3b3b;
-  border: none;
-  height: 35px;
-  width: 15%;
-  color: white;
-}
-/* Media Queries **************************/
-/* @media (max-width: 1024px) {
-  .highlight {
-    display: none;
-  }
-  .fr-en-right {
-    display: none;
-  }
-  .search-magnifier {
-    display: none;
-  }
-  header {
-    height: 180px;
-  }
-  header .social-network {
-    display: none;
-  }
-} */
