--- a/FRONT/gatsby-sens-interdits/src/assets/styles/global.css
+++ b/FRONT/gatsby-sens-interdits/src/assets/styles/global.css
@@ -41,3 +41,13 @@ a {
 li {
   list-style: none;
 }
+
+/* LIBRARY CLASSNAME */
+
+.filter-invert {
+  filter: invert(100%);
+}
+
+.to-uppercase {
+  text-transform: uppercase;
+}
