--- a/FRONT/gatsby-sens-interdits/src/components/globals/Calendar/CalendarLarge.css
+++ b/FRONT/gatsby-sens-interdits/src/components/globals/Calendar/CalendarLarge.css
@@ -5,6 +5,5 @@
   flex-wrap: nowrap;
   /* justify-content: center; */
   width: 1080px;
-  margin: auto;
-  margin-top: 20px;
+  margin: 20px auto 0 auto;
 }
