--- a/FRONT/gatsby-sens-interdits/src/components/globals/Thumbnail/Index.css
+++ b/FRONT/gatsby-sens-interdits/src/components/globals/Thumbnail/Index.css
@@ -1,4 +1,4 @@
-.miniTab {
+.mini-tab {
   display: flex;
   flex-direction: column;
   width: 200px;
@@ -6,13 +6,13 @@
   flex-wrap: wrap;
 }
 
-.global-miniTab {
+.global-mini-tab {
   position: relative;
   width: 200px;
   height: 200px;
 }
 
-.img-miniTab {
+.img-mini-tab {
   width: 200px;
   height: 200px;
   object-fit: cover;
@@ -20,13 +20,13 @@
   border: solid black 1px;
 }
 
-.title-miniTab {
+.title-mini-tab {
   position: absolute;
   top: 0;
   z-index: 1;
 }
 
-.date-miniTab {
+.date-mini-tab {
   background-color: white;
   padding: 4px;
   border-radius: 0 0 5px 0;
@@ -34,7 +34,7 @@
   width: max-content;
 }
 
-.country-miniTab {
+.country-mini-tab {
   background-color: red;
   color: white;
   padding: 4px;
@@ -49,7 +49,7 @@
   right: 10px;
 }
 
-.name-miniTab {
+.name-mini-tab {
   color: red;
   margin-top: 5px;
   margin-left: 5px;
@@ -57,7 +57,7 @@
   font-weight: bold;
 }
 
-.team-miniTab {
+.team-mini-tab {
   margin-top: 5px;
   margin-left: 5px;
   font-size: 18px;
